<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:text="@string/item"
        android:layout_weight="1"
        android:layout_width="0dip"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/qty"
        android:layout_weight="1"
        android:layout_width="0dip"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/cost"
        android:layout_weight="1"
        android:layout_width="0dip"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/imported"
        android:layout_weight="1"
        android:layout_width="0dip"
        android:layout_height="wrap_content" />
</LinearLayout>