<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingLeft="5dip"
    android:paddingRight="5dip"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Space
        android:layout_width="match_parent"
        android:layout_height="5dip" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/something"
            android:text="@string/item"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/item"
            android:layout_weight="3"
            android:layout_width="0dip"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="5dip" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/quantity"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/quantity"
            android:inputType="number"
            android:layout_weight="3"
            android:layout_width="0dip"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="5dip" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/cost"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/cost"
            android:inputType="numberDecimal"
            android:layout_weight="3"
            android:layout_width="0dip"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="5dip" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/type"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/type"
            android:entries="@array/typeArray"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"/>
        <Space
            android:layout_width="2dip"
            android:layout_height="match_parent" />
        <TextView
            android:text="@string/imported"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/imported"
            android:entries="@array/isImported"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="5dip" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/cancel"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/ok"
            android:text="@string/ok"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>