<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/message"
            android:layout_weight="2"
            android:layout_width="0dip"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/add"
            android:text="@string/add"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Space
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="0dip" />

    <include layout="@layout/list_header_row" />

    <View
        android:background="@color/highlighted_text_material_dark"
        android:layout_width="match_parent"
        android:layout_height="2dip" />
    <ListView
        android:id="@+id/list"
        android:layout_weight="95"
        android:background="?android:attr/activatedBackgroundIndicator"
        android:layout_width="match_parent"
        android:layout_height="0dip"/>

    <Space
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="0dip" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/clear"
            android:text="@string/clear"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_width="0dip"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/calculate"
            android:text="@string/show"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_width="0dip"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
